# call_me_maybe

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
data/input/: test_one.json  test_regex.json  test_regex_cases.json  test_required_cases.json
src/: __main__.py  func_chooser.py  generator.py  models.py  reader.py  writer.py
tests/: test_generator.py
