[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling tool using constrained decoding with a small LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.19.0",
    "numpy",
    "pydantic",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]
